# FastFiRSt

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  LICENSE  README.md  architecture.md
.devcontainer/: .dockerignore  Dockerfile
.github/workflows/: deploy.yml  publish-flash-cli.yml
fastq-gen-cli/: Cargo.toml
fastq-gen-cli/src/: main.rs
flash-cli/: Cargo.toml  README.md
flash-cli/src/: main.rs
flash-df/: Cargo.toml
flash-df/examples/: flash_cli.rs  flash_udf.rs  query.rs
flash-df/src/: lib.rs
flash-lib/: Cargo.toml  README.md
flash-lib/src/: lib.rs
flash-lib/tests/: golden.rs
flash-wasm/: Cargo.toml
flash-wasm/src/: lib.rs
perf-cli/: Cargo.toml
perf-cli/src/: main.rs
perf-lib/: Cargo.toml
perf-lib/src/: io.rs  lib.rs  motif.rs  scanner.rs  stats.rs
perf-lib/tests/: golden.rs
perf-lib/tests/data/: test_input.fa  test_input_perf.tsv
scripts/: build_flash_lowercase_overhang.sh  compare_flash_implementations.sh  compare_perf_implementations.sh  run_flash_df.sh  setup_benchmarks.sh
site/: index.html
site/benchmarks/: flash.html  flash_results.json  perf.html  perf_results.json
src/: main.rs
wasm-playground/: README.md  pnpm-lock.yaml  vite.config.ts
wasm-playground/public/: flash_wasm.wasm
wasm-playground/src/components/: About.tsx  FlashUpload.tsx  Sidebar.tsx
wasm-playground/src/lib/: flash.ts
