[package]
name = "flash-df"
version = "0.1.0"
edition = "2024"

[features]
default = []
datafusion = ["dep:datafusion", "dep:async-trait", "dep:tokio", "dep:futures", "dep:crossbeam-channel", "dep:num_cpus"]

[dependencies]
anyhow = { workspace = true }
flash-lib = { path = "../flash-lib" }

datafusion = { version = "41", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
futures = { version = "0.3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
num_cpus = { version = "1", optional = true }
chrono = { version = "=0.4.37" }

[dev-dependencies]
tempfile = "3"
