[package]
name = "flash-df"
version = "0.1.0"
edition = "2024"

[features]
default = []
datafusion = ["dep:datafusion", "dep:async-trait", "dep:tokio"]

[dependencies]
anyhow = { workspace = true }
flash-lib = { path = "../flash-lib" }

datafusion = { version = "41", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
chrono = { version = "=0.4.37" }

[dev-dependencies]
tempfile = "3"
